--- a/julia/snap/snapcraft.yaml
+++ b/julia/snap/snapcraft.yaml
@@ -1,12 +1,9 @@
 name: julia
-#version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-version: git
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+version: 0.6.2
+summary: The Julia programming language.
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  Julia is a high-level, high-performance dynamic programming language for
+  numerical computing. See https://julialang.org/ for more information.
 
 grade: devel
 confinement: classic
@@ -17,9 +14,19 @@ apps:
 
 parts:
   julia:
-    plugin: dump
-    prepare: |
-      #wget https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.2-linux-x86_64.tar.gz
-      #tar -xf julia-0.6.2-linux-x86_64.tar.gz
-      tar -xf /home/mortenpi/Julia/julia-0.6.2-linux-x86_64.tar.gz
-      cp -R julia-d386e40c17/* $SNAPCRAFT_PART_INSTALL/
+    plugin: nil
+    override-build: |
+      JULIA_TARBALL=julia-0.6.2-linux-x86_64.tar.gz # 0.6.2 contains julia-d386e40c17/
+      DOWNLOADS_DIRECTORY=$SNAPCRAFT_STAGE/../downloads # should be julia/downloads
+      JULIA_TARBALL_PATH="${DOWNLOADS_DIRECTORY}/${JULIA_TARBALL}"
+      mkdir -p "$DOWNLOADS_DIRECTORY"
+      if ! [ -f "${JULIA_TARBALL_PATH}" ]; then
+        echo "Downloading Julia tarball into ${$DOWNLOADS_DIRECTORY}"
+        wget https://julialang-s3.julialang.org/bin/linux/x64/0.6/${JULIA_TARBALL} -O ${JULIA_TARBALL_PATH}
+      else
+        echo "Reusing ${JULIA_TARBALL_PATH}"
+      fi
+      echo "Unpacking ${JULIA_TARBALL_PATH}\n into `pwd`"
+      tar -xf ${JULIA_TARBALL_PATH}
+      mv julia-d386e40c17/* $SNAPCRAFT_PART_INSTALL/
+      rmdir julia-d386e40c17/
