--- a/julia/snap/snapcraft.yaml
+++ b/julia/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: julia
-version: 0.6.4
+version: 0.7.0
 summary: The Julia programming language.
 description: |
   Julia is a high-level, high-performance dynamic programming language for
@@ -16,9 +16,9 @@ parts:
   julia:
     plugin: nil
     override-build: |
-      JULIA_URL_BASE="https://julialang-s3.julialang.org/bin/linux/x64/0.6/"
-      JULIA_TARBALL=julia-0.6.4-linux-x86_64.tar.gz
-      JULIA_DIRECTORY=julia-9d11f62bcb # 0.6.4 contains julia-9d11f62bcb/
+      JULIA_URL_BASE="https://julialang-s3.julialang.org/bin/linux/x64/0.7/"
+      JULIA_TARBALL=julia-0.7.0-linux-x86_64.tar.gz
+      JULIA_DIRECTORY=julia-0.7.0
       DOWNLOADS_DIRECTORY=${SNAPCRAFT_STAGE}/../downloads # should be julia/downloads
       JULIA_TARBALL_PATH="${DOWNLOADS_DIRECTORY}/${JULIA_TARBALL}"
       mkdir -p "$DOWNLOADS_DIRECTORY"
